# smart_recipe_server

./: .env.example  API_TEST_GUIDE.md  API测试报告.docx  README.md  SETUP.md  TROUBLESHOOTING.md  pyproject.toml  test_api.py  test_api.sh  test_config.py  技术架构图说明.docx
apps/community/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/community/migrations/: 0001_initial.py  0002_postlike.py
apps/ingredient/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/ingredient/management/commands/: train_ingredient_model.py
apps/ingredient/migrations/: 0001_initial.py  0002_remove_vitamin_season.py
apps/ingredient/ml/: dataset.py  inference.py  model.py  train.py
apps/ingredient/ml/saved_models/: classes.json
apps/nutrition/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/nutrition/migrations/: 0001_initial.py  0002_add_dietary_log_fiber.py
apps/recipe/: admin.py  apps.py  models.py  recommender.py  serializers.py  urls.py  views.py
apps/recipe/management/commands/: train_ncf.py
apps/recipe/migrations/: 0001_initial.py  0002_alter_recipe_category.py
apps/shopping/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/shopping/migrations/: 0001_initial.py  0002_shoppinglistshare.py
apps/user/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_follow.py
common/: admin_mixins.py  pagination.py  permissions.py  response.py
scripts/: collect_dataset.py
smart_recipe_server/: settings.py  urls.py
(+10 files in other folders)
